	- Fixed message when setting Town tags to not say nation.
	- Fixed '/nation deposit' error message.
	- Added handling of World initialization to fix a bug when creating new worlds with Multiverse.
v0.76.1.10:
	- Permit residents not in town to use public spawns again.
	- Corrected permissions node checking to match those in the config for spawn travel.
v0.76.1.11:
	- Removed a lot of debug spam from permission checking.
v0.76.1.12:
	- Fix for a possible error on shutdown with active warzones.
	- Fix so players can only attack other towns IF the correct number of players are online on BOTH sides.
	- If your town/nation is attacked with warflags the attackers will automatically be set as enemies (allows you to attack back).
	- Fixed renaming a town when it's also a capitol failing to update the nation.
	- Removed dependency on Bukkit to report the world list at startup (it's not always complete).
v0.76.1.13:
	- Fixed a startup error on fresh installs.
v0.76.1.14:
	- Towns which have unclaimed their HomeBlock (or all TownBlocks) no longer corrupt the data files on a shutdown.
	- Towns are now able to move worlds by moving their homeblock to that world.
	- Fixed Account creation for towns and nations when using BOSEconomy.
	- Towny now uses the correct currency type (coins/dollars) as defined in your Eco plugin.
v0.76.1.15:
	- Added '/town set tag clear' and '/nation set tag clear' to reset tags.
	- Titles and surnames are now reset if the player is not in a nation.
v0.76.1.16:
	- Added '/plot clear' for mayors.
	  If a plot is owned by the town (not a resident) the mayor can stand in the plot and type this command to remove all block types as specified in mayor_plotblock_delete.
	  This setting is per world so transfers to the world data files at startup.
v0.76.1.17:
	- Added upkeep charging based upon the number of town plots (town_plotbased_upkeep) - thanks to phex
	- Slight reorgnise of TownyUniverse (if you hook towny be sure your functions have not moved).