@@ -977,7 +977,18 @@ public class TownySettings {
 	}
 	
 	public static long getDayInterval() {
-		return getSeconds(ConfigNodes.PLUGIN_DAY_INTERVAL);
+		return TimeTools.secondsFromDhms("24h");
+		//return getSeconds(ConfigNodes.PLUGIN_DAY_INTERVAL);
+	}
+	
+	public static long getNewDayTime() {
+		long time = getSeconds(ConfigNodes.PLUGIN_NEWDAY_TIME);
+		long day = getDayInterval();
+		if (time > day) {
+			setProperty(ConfigNodes.PLUGIN_NEWDAY_TIME.getRoot(), "24h");
+			return day;
+		}
+		return time;
 	}
 	
 	public static boolean isAllowingTownSpawn() {
